[package]
name = "vagent"
version = "0.1.0"
edition = "2021"

[lib]
name = "vagent"
path = "src/rpc.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26", features = ["fs","rt-multi-thread", "macros", "process", "sync"] }
anyhow = { version = "1.0.69"}
dns-lookup = {version = "1.0.8"}
nix = "0.26.2"
